--- a/app/Resources/views/proprietaire/menu.html.twig
+++ b/app/Resources/views/proprietaire/menu.html.twig
@@ -1,6 +1,6 @@
 <li class="nav-item">
     <a class="nav-link" href="{{ path('vehicule_index') }}">
-        <i class="nav-icon fa fa-car"></i> AIGUILLAGE
+        <i class="nav-icon fa fa-car"></i> VEHICULES
     </a>
 </li>
 <li class="nav-item">
