--- a/app/Resources/views/carrosserie/index.html.twig
+++ b/app/Resources/views/carrosserie/index.html.twig
@@ -1,12 +1,19 @@
 {% extends '::base.html.twig' %}
+{% block menu -%}
+{% embed  '::parametres/menu.html.twig' %}
+{% block menu_vehicules_open %}open{% endblock %}
+{% block menu_carrosseries_open %}open{% endblock %}
+{% block menu_carrosseries_actif %}active{% endblock %}
+{% endembed %}
+{% endblock %}
 {% block ariane -%}
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="{{ path('homepage') }}">Accueil</a></li>
+        <li class="breadcrumb-item"><a href="{{ path('parametre_index') }}">Paramètres</a></li>
         <li class="breadcrumb-item">Carrosseries</li>
     </ol>
 {% endblock %}
 {% block pagetitle -%}LISTE DES CARROSSERIES DE VEHICULE{% endblock %}
-{% block menu_carrosseries_actif %}active{% endblock %}
 
 {% block actions %}
     <label class="btn btn-outline-secondary"><a href="{{ path('carrosserie_export') }}">EXPORTER</a></label>
@@ -19,7 +26,7 @@
         <table id="liste_clients" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered datatable dataTable no-footer">
             <thead>
                 <tr>
-                    <th>Libelle</th>
+                    <th>Libellé</th>
                     <th>Code</th>
                     <th>Actions</th>
                 </tr>
