--- a/app/Resources/views/carrosserie/new.html.twig
+++ b/app/Resources/views/carrosserie/new.html.twig
@@ -1,18 +1,26 @@
 {% extends '::base.html.twig' %}
+{% block menu -%}
+{% embed  '::parametres/menu.html.twig' %}
+{% block menu_vehicules_open %}open{% endblock %}
+{% block menu_carrosseries_open %}open{% endblock %}
+{% block menu_carrosseries_actif %}active{% endblock %}
+{% endembed %}
+{% endblock %}
 {% block ariane -%}
     <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="{{ path('homepage') }}">Accueil</a></li>
+          <li class="breadcrumb-item"><a href="{{ path('parametre_index') }}">Paramètres</a></li>
           <li class="breadcrumb-item"><a href="{{ path('admin_parametres_carrosserie_index') }}">Carrosserie</a></li>
           <li class="breadcrumb-item">Créer</li>
         </ol>
 {% endblock %}
 {% block pagetitle -%}CREER UNE CARROSSERIE DE VEHICULE{% endblock %}
 {% block actions %} 
-    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_carrosserie_index') }}">Retour à la liste</a></label>
+    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_carrosserie_index') }}">RETOUR A LA LISTE</a></label>
 {% endblock %}
 {% block body %}
     {{ form_start(form) }}
         {{ form_widget(form) }}
-        <input type="submit" value="Enregistrer" />
+        <input type="submit" value="ENREGISTRER" />
     {{ form_end(form) }}
 {% endblock %}
