--- a/app/Resources/views/categoriecontrole/index.html.twig
+++ b/app/Resources/views/categoriecontrole/index.html.twig
@@ -1,8 +1,16 @@
 {% extends '::base.html.twig' %}
+{% block menu -%}
+{% embed  '::parametres/menu.html.twig' %}
+{% block menu_maha_open %}open{% endblock %}
+{% block menu_categoriecontroles_open %}open{% endblock %}
+{% block menu_categoriecontroles_actif %}active{% endblock %}
+{% endembed %}
+{% endblock %}
 {% block ariane -%}
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="{{ path('homepage') }}">Accueil</a></li>
-        <li class="breadcrumb-item">Catégories de controle</li>
+        <li class="breadcrumb-item"><a href="{{ path('parametre_index') }}">Paramètres</a></li>
+        <li class="breadcrumb-item">Catégories de contrôle</li>
     </ol>
 {% endblock %}
 {% block pagetitle -%}LISTE DES CATEGORIES DE CONTROLE{% endblock %}
@@ -19,7 +27,7 @@
         <table id="liste_clients" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered datatable dataTable no-footer">
             <thead>
                 <tr>
-                    <th>Libelle</th>
+                    <th>Libellé</th>
                     <th>Code</th>
                     <th>Actions</th>
                 </tr>
@@ -29,7 +37,7 @@
             </tbody>
             <tfoot>
                 <tr>
-                    <th>Libelle</th>
+                    <th>Libellé</th>
                     <th>Code</th>
                     <th>Actions</th>
                 </tr>
