--- a/app/Resources/views/controle/edit.html.twig
+++ b/app/Resources/views/controle/edit.html.twig
@@ -1,26 +1,32 @@
 {% extends '::base.html.twig' %}
 {% block menu -%}
-{% include '::parametres/menu.html.twig' %}
+{% embed  '::parametres/menu.html.twig' %}
+{% block menu_maha_open %}open{% endblock %}
+{% block menu_controle_open %}open{% endblock %}
+{% block menu_controle_actif %}active{% endblock %}
+{% endembed %}
 {% endblock %}
 {% block ariane -%}
     <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="{{ path('homepage') }}">Accueil</a></li>
-          <li class="breadcrumb-item"><a href="{{ path('admin_parametres_controle_index') }}">Contrôles</a></li>
+          <li class="breadcrumb-item"><a href="{{ path('parametre_index') }}">Paramètres</a></li>
+          <li class="breadcrumb-item"><a href="{{ path('admin_parametres_controle_index') }}">Points de contrôle</a></li>
           <li class="breadcrumb-item">Modifier</li>
     </ol>
 {% endblock %}
-{% block pagetitle -%}MODIFIER UN CONTROLE{% endblock %}
+{% block pagetitle -%}MODIFIER UN POINT DE CONTROLE{% endblock %}
 {% block actions %} 
-    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_controle_index') }}">Retour à la liste</a></label>
+    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_controle_index') }}">RETOUR A LA LISTE</a></label>
+    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_controle_new') }}">CREER</a></label>
     <label class="btn btn-outline-secondary">
         {{ form_start(delete_form) }}
-            <input type="submit" value="Supprimer" onclick="return confirm('Etes-vous sûr de vouloir supprimer?');">
+            <input type="submit" value="SUPPRIMER" onclick="return confirm('Etes-vous sûr de vouloir supprimer?');">
         {{ form_end(delete_form) }}
     </label>
 {% endblock %}
 {% block body %}
     {{ form_start(edit_form) }}
         {{ form_widget(edit_form) }}
-        <input type="submit" value="Modifier" />
+        <input type="submit" value="MODIFIER" />
     {{ form_end(edit_form) }}
 {% endblock %}
