--- a/app/Resources/views/controle/new.html.twig
+++ b/app/Resources/views/controle/new.html.twig
@@ -1,21 +1,25 @@
 {% extends '::base.html.twig' %}
 {% block menu -%}
-{% include '::parametres/menu.html.twig' %}
+{% embed  '::parametres/menu.html.twig' %}
+{% block menu_maha_open %}open{% endblock %}
+{% block menu_controle_open %}open{% endblock %}
+{% block menu_controle_actif %}active{% endblock %}
+{% endembed %}
 {% endblock %}
 {% block ariane -%}
     <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="{{ path('homepage') }}">Accueil</a></li>
-          <li class="breadcrumb-item"><a href="{{ path('admin_parametres_controle_index') }}">Controle</a></li>
+          <li class="breadcrumb-item"><a href="{{ path('admin_parametres_controle_index') }}">Points de contrôle</a></li>
           <li class="breadcrumb-item">Créer</li>
         </ol>
 {% endblock %}
-{% block pagetitle -%}CREER UN CONTROLE{% endblock %}
+{% block pagetitle -%}CREER UN POINT DE CONTROLE{% endblock %}
 {% block actions %} 
-    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_controle_index') }}">Retour à la liste</a></label>
+    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_controle_index') }}">RETOUR A LA LISTE</a></label>
 {% endblock %}
 {% block body %}
     {{ form_start(form) }}
         {{ form_widget(form) }}
-        <input type="submit" value="Enregistrer" />
+        <input type="submit" value="ENREGISTRER" />
     {{ form_end(form) }}
 {% endblock %}
