--- a/app/Resources/views/controle/show.html.twig
+++ b/app/Resources/views/controle/show.html.twig
@@ -1,21 +1,27 @@
 {% extends '::base.html.twig' %}
 {% block menu -%}
-{% include '::parametres/menu.html.twig' %}
+{% embed  '::parametres/menu.html.twig' %}
+{% block menu_maha_open %}open{% endblock %}
+{% block menu_controle_open %}open{% endblock %}
+{% block menu_controle_actif %}active{% endblock %}
+{% endembed %}
 {% endblock %}
 {% block ariane -%}
     <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="{{ path('homepage') }}">Accueil</a></li>
-          <li class="breadcrumb-item"><a href="{{ path('admin_parametres_controle_index') }}">Contrôle</a></li>
+          <li class="breadcrumb-item"><a href="{{ path('parametre_index') }}">Paramètres</a></li>
+          <li class="breadcrumb-item"><a href="{{ path('admin_parametres_controle_index') }}">Points de contrôle</a></li>
           <li class="breadcrumb-item">Détail</li>
     </ol>
 {% endblock %}
-{% block pagetitle -%}VOIR UN CONTROLE{% endblock %}
+{% block pagetitle -%}VOIR UN POINT DE CONTROLE{% endblock %}
 {% block actions %}
-    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_controle_index') }}">Liste des contrôles</a></label>
-    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_controle_edit', { 'id': controle.id }) }}">Modifier</a></label>
+    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_controle_index') }}">LISTER</a></label>
+    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_controle_edit', { 'id': controle.id }) }}">MODIFIER</a></label>
+    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_controle_new') }}">CREER</a></label>
     <label class="btn btn-outline-secondary">
         {{ form_start(delete_form) }}
-            <input type="submit" value="Supprimer" onclick="return confirm('Etes-vous sûr de vouloir supprimer?');">
+            <input type="submit" value="SUPPRIMER" onclick="return confirm('Etes-vous sûr de vouloir supprimer?');">
         {{ form_end(delete_form) }}
     </label>
 {% endblock %}
@@ -23,12 +29,16 @@
     <table class="table table-hover">
         <tbody>
             <tr>
-                <th>Libelle</th>
+                <th>Libellé</th>
                 <td>{{ controle.libelle }}</td>
             </tr>
             <tr>
                 <th>Code</th>
                 <td>{{ controle.code }}</td>
+            </tr>
+            <tr>
+                <th>Type</th>
+                <td>{{ controle.type }}</td>
             </tr>
             <tr>
                 <th>Detail</th>
