--- a/app/Resources/views/genre/index.html.twig
+++ b/app/Resources/views/genre/index.html.twig
@@ -1,7 +1,15 @@
 {% extends '::base.html.twig' %}
+{% block menu -%}
+{% embed  '::parametres/menu.html.twig' %}
+{% block menu_vehicules_open %}open{% endblock %}
+{% block menu_genres_open %}open{% endblock %}
+{% block menu_genres_actif %}active{% endblock %}
+{% endembed %}
+{% endblock %}
 {% block ariane -%}
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="{{ path('homepage') }}">Accueil</a></li>
+        <li class="breadcrumb-item"><a href="{{ path('parametre_index') }}">Paramètres</a></li>
         <li class="breadcrumb-item">Genres</li>
     </ol>
 {% endblock %}
