--- a/app/Resources/views/marque/index.html.twig
+++ b/app/Resources/views/marque/index.html.twig
@@ -1,13 +1,19 @@
 {% extends '::base.html.twig' %}
+{% block menu -%}
+{% embed  '::parametres/menu.html.twig' %}
+{% block menu_vehicules_open %}open{% endblock %}
+{% block menu_marques_open %}open{% endblock %}
+{% block menu_marques_actif %}active{% endblock %}
+{% endembed %}
+{% endblock %}
 {% block ariane -%}
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="{{ path('homepage') }}">Accueil</a></li>
+        <li class="breadcrumb-item"><a href="{{ path('parametre_index') }}">Paramètres</a></li>
         <li class="breadcrumb-item">Marques</li>
     </ol>
 {% endblock %}
 {% block pagetitle -%}LISTE DES MARQUES DE VEHICULE{% endblock %}
-{% block menu_marques_actif %}active{% endblock %}
-
 {% block actions %}
     <label class="btn btn-outline-secondary"><a href="{{ path('marque_export') }}">EXPORTER</a></label>
     {% if is_granted('ROLE_SUPERVISEUR') %} 
