--- a/app/Resources/views/modele/index.html.twig
+++ b/app/Resources/views/modele/index.html.twig
@@ -1,16 +1,22 @@
 {% extends '::base.html.twig' %}
+{% block menu -%}
+{% embed  '::parametres/menu.html.twig' %}
+{% block menu_vehicules_open %}open{% endblock %}
+{% block menu_modeles_open %}open{% endblock %}
+{% block menu_modeles_actif %}active{% endblock %}
+{% endembed %}
+{% endblock %}
 {% block ariane -%}
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="{{ path('homepage') }}">Accueil</a></li>
+        <li class="breadcrumb-item"><a href="{{ path('parametre_index') }}">Paramètres</a></li>
         <li class="breadcrumb-item">Modèles</li>
     </ol>
 {% endblock %}
 {% block pagetitle -%}LISTE DES MODELES{% endblock %}
-{% block menu_modeles_actif %}active{% endblock %}
-
 {% block actions %}
     <label class="btn btn-outline-secondary"><a href="{{ path('modele_export') }}">EXPORTER</a></label>
-    {% if is_granted('ROLE_SUPERVISEUR') %} 
+    {% if is_granted('ROLE_ENREGISTREMENT') %} 
         <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_modele_new') }}">CREER</a></label>
     {% endif %}
 {% endblock %}
@@ -19,7 +25,7 @@
         <table id="liste_clients" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered datatable dataTable no-footer">
             <thead>
                 <tr>
-                    <th>Libelle</th>
+                    <th>Libellé</th>
                     <th>Code</th>
                     <th>Marque</th>
                     <th>Actions</th>
