--- a/app/Resources/views/modele/new.html.twig
+++ b/app/Resources/views/modele/new.html.twig
@@ -1,14 +1,22 @@
 {% extends '::base.html.twig' %}
+{% block menu -%}
+{% embed  '::parametres/menu.html.twig' %}
+{% block menu_vehicules_open %}open{% endblock %}
+{% block menu_modeles_open %}open{% endblock %}
+{% block menu_modeles_actif %}active{% endblock %}
+{% endembed %}
+{% endblock %}
 {% block ariane -%}
     <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="{{ path('homepage') }}">Accueil</a></li>
+          <li class="breadcrumb-item"><a href="{{ path('parametre_index') }}">Paramètres</a></li>
           <li class="breadcrumb-item"><a href="{{ path('admin_parametres_modele_index') }}">Modèles</a></li>
           <li class="breadcrumb-item">Créer</li>
         </ol>
 {% endblock %}
 {% block pagetitle -%}CREER UN MODELE DE VEHICULE{% endblock %}
 {% block actions %} 
-    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_modele_index') }}">Retour à la liste</a></label>
+    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_modele_index') }}">RETOUR A LA LISTE</a></label>
 {% endblock %}
 {% block body %}
     {{ form_start(form) }}
