--- a/app/Resources/views/penalite/index.html.twig
+++ b/app/Resources/views/penalite/index.html.twig
@@ -1,12 +1,19 @@
 {% extends '::base.html.twig' %}
+{% block menu -%}
+{% embed  '::parametres/menu.html.twig' %}
+{% block menu_tarifs_open %}open{% endblock %}
+{% block menu_penalites_open %}open{% endblock %}
+{% block menu_penalites_actif %}active{% endblock %}
+{% endembed %}
+{% endblock %}
 {% block ariane -%}
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="{{ path('homepage') }}">Accueil</a></li>
-        <li class="breadcrumb-item">Pénalité</li>
+        <li class="breadcrumb-item"><a href="{{ path('parametre_index') }}">Paramètres</a></li>
+        <li class="breadcrumb-item">Pénalités</li>
     </ol>
 {% endblock %}
 {% block pagetitle -%}LISTE DES PENALITES{% endblock %}
-{% block menu_penalite_actif %}active{% endblock %}
 
 {% block actions %}
     <label class="btn btn-outline-secondary"><a href="{{ path('penalite_export') }}">EXPORTER</a></label>
