--- a/app/Resources/views/proprietaire/show.html.twig
+++ b/app/Resources/views/proprietaire/show.html.twig
@@ -77,4 +77,19 @@
             </tr>
         </tbody>
     </table>
+    {% if proprietaire.vehicules %}
+        <table class="table table-hover">
+            <tbody>
+                <tr><th colspan="4">LISTE DE SES VEHICULES</th></tr>
+                {% for vehicule in proprietaire.vehicules %}
+                    <tr>
+                        <th>Immatriculation</th>
+                        <td>{{ vehicule.immatriculation }}</td>
+                        <th>Modele</th>
+                        <td>{{ vehicule.modele }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    {% endif %}
 {% endblock %}
