--- a/app/Resources/views/typeimmatriculation/index.html.twig
+++ b/app/Resources/views/typeimmatriculation/index.html.twig
@@ -1,13 +1,19 @@
 {% extends '::base.html.twig' %}
+{% block menu -%}
+{% embed  '::parametres/menu.html.twig' %}
+{% block menu_vehicules_open %}open{% endblock %}
+{% block menu_typeimmatriculations_open %}open{% endblock %}
+{% block menu_typeimmatriculations_actif %}active{% endblock %}
+{% endembed %}
+{% endblock %}
 {% block ariane -%}
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="{{ path('homepage') }}">Accueil</a></li>
+        <li class="breadcrumb-item"><a href="{{ path('parametre_index') }}">Paramètres</a></li>
         <li class="breadcrumb-item">Types d'immatriculation</li>
     </ol>
 {% endblock %}
 {% block pagetitle -%}LISTE DES TYPES D'IMMATRICULATION{% endblock %}
-{% block menu_typeimmatriculations_actif %}active{% endblock %}
-
 {% block actions %}
     <label class="btn btn-outline-secondary"><a href="{{ path('typeimmatriculation_export') }}">EXPORTER</a></label>
     {% if is_granted('ROLE_SUPERVISEUR') %} 
