--- a/app/Resources/views/typeimmatriculation/new.html.twig
+++ b/app/Resources/views/typeimmatriculation/new.html.twig
@@ -1,14 +1,22 @@
 {% extends '::base.html.twig' %}
+{% block menu -%}
+{% embed  '::parametres/menu.html.twig' %}
+{% block menu_vehicules_open %}open{% endblock %}
+{% block menu_typeimmatriculations_open %}open{% endblock %}
+{% block menu_typeimmatriculations_actif %}active{% endblock %}
+{% endembed %}
+{% endblock %}
 {% block ariane -%}
     <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="{{ path('homepage') }}">Accueil</a></li>
+          <li class="breadcrumb-item"><a href="{{ path('parametre_index') }}">Paramètres</a></li>
           <li class="breadcrumb-item"><a href="{{ path('admin_parametres_typeimmatriculation_index') }}">Types d'immatriculations</a></li>
           <li class="breadcrumb-item">Créer</li>
         </ol>
 {% endblock %}
 {% block pagetitle -%}CREER UN TYPE D'IMMATRICULATION{% endblock %}
 {% block actions %} 
-    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_typeimmatriculation_index') }}">Retour à la liste</a></label>
+    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_typeimmatriculation_index') }}">RETOUR A LA LISTE</a></label>
 {% endblock %}
 {% block body %}
     {{ form_start(form) }}
