--- a/app/Resources/views/typeimmatriculation/show.html.twig
+++ b/app/Resources/views/typeimmatriculation/show.html.twig
@@ -1,18 +1,27 @@
 {% extends '::base.html.twig' %}
+{% block menu -%}
+{% embed  '::parametres/menu.html.twig' %}
+{% block menu_vehicules_open %}open{% endblock %}
+{% block menu_typeimmatriculations_open %}open{% endblock %}
+{% block menu_typeimmatriculations_actif %}active{% endblock %}
+{% endembed %}
+{% endblock %}
 {% block ariane -%}
     <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="{{ path('homepage') }}">Accueil</a></li>
+          <li class="breadcrumb-item"><a href="{{ path('parametre_index') }}">Paramètres</a></li>
           <li class="breadcrumb-item"><a href="{{ path('admin_parametres_typeimmatriculation_index') }}">Types d'immatriculation</a></li>
           <li class="breadcrumb-item">Détail</li>
     </ol>
 {% endblock %}
 {% block pagetitle -%}VOIR UN TYPE D'IMMATRICULATION{% endblock %}
 {% block actions %}
-    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_typeimmatriculation_index') }}">Liste des types d'immatriculation</a></label>
-    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_typeimmatriculation_edit', { 'id': typeImmatriculation.id }) }}">Modifier</a></label>
+    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_typeimmatriculation_index') }}">LISTER</a></label>
+    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_typeimmatriculation_edit', { 'id': typeImmatriculation.id }) }}">MODIFIER</a></label>
+    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_typeimmatriculation_new') }}">CREER</a></label>
     <label class="btn btn-outline-secondary">
         {{ form_start(delete_form) }}
-            <input type="submit" value="Supprimer" onclick="return confirm('Etes-vous sûr de vouloir supprimer?');">
+            <input type="submit" value="SUPPRIMER" onclick="return confirm('Etes-vous sûr de vouloir supprimer?');">
         {{ form_end(delete_form) }}
     </label>
 {% endblock %}
