--- a/app/Resources/views/typevehicule/index.html.twig
+++ b/app/Resources/views/typevehicule/index.html.twig
@@ -1,12 +1,19 @@
 {% extends '::base.html.twig' %}
+{% block menu -%}
+{% embed  '::parametres/menu.html.twig' %}
+{% block menu_tarifs_open %}open{% endblock %}
+{% block menu_typevehicule_open %}open{% endblock %}
+{% block menu_typevehicule_actif %}active{% endblock %}
+{% endembed %}
+{% endblock %}
 {% block ariane -%}
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="{{ path('homepage') }}">Accueil</a></li>
+        <li class="breadcrumb-item"><a href="{{ path('parametre_index') }}">Paramètres</a></li>
         <li class="breadcrumb-item">Types de véhicule</li>
     </ol>
 {% endblock %}
 {% block pagetitle -%}LISTE DES TYPES DE VEHICULES{% endblock %}
-{% block menu_typevehicules_actif %}active{% endblock %}
 
 {% block actions %}
     <label class="btn btn-outline-secondary"><a href="{{ path('typevehicule_export') }}">EXPORTER</a></label>
@@ -19,10 +26,11 @@
     <table id="liste_clients" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered datatable dataTable no-footer">
         <thead>
             <tr>
-                <th>Libelle</th>
+                <th>Libellé</th>
                 <th>Montant revisite</th>
                 <th>Montant visite</th>
-                <th>Delai</th>
+                <th>Delai revisite</th>
+                <th>Validité visite</th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -31,10 +39,11 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Libelle</th>
+                <th>Libellé</th>
                 <th>Montant revisite</th>
                 <th>Montant visite</th>
-                <th>Delai</th>
+                <th>Delai revesite</th>
+                <th>Validité visite</th>
                 <th>Actions</th>
             </tr>
         </tfoot>
