--- a/app/Resources/views/typevehicule/show.html.twig
+++ b/app/Resources/views/typevehicule/show.html.twig
@@ -1,18 +1,27 @@
 {% extends '::base.html.twig' %}
+{% block menu -%}
+{% embed  '::parametres/menu.html.twig' %}
+{% block menu_tarifs_open %}open{% endblock %}
+{% block menu_typevehicule_open %}open{% endblock %}
+{% block menu_typevehicule_actif %}active{% endblock %}
+{% endembed %}
+{% endblock %}
 {% block ariane -%}
     <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="{{ path('homepage') }}">Accueil</a></li>
+          <li class="breadcrumb-item"><a href="{{ path('parametre_index') }}">Paramètres</a></li>
           <li class="breadcrumb-item"><a href="{{ path('admin_parametres_typevehicule_index') }}">Types de véhicule</a></li>
           <li class="breadcrumb-item">Détail</li>
     </ol>
 {% endblock %}
 {% block pagetitle -%}VOIR UN TYPE DE VEHICULE{% endblock %}
 {% block actions %}
-    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_typevehicule_index') }}">Liste des types de véhicule</a></label>
-    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_typevehicule_edit', { 'id': typeVehicule.id }) }}">Modifier</a></label>
+    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_typevehicule_index') }}">LISTER</a></label>
+    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_typevehicule_edit', { 'id': typeVehicule.id }) }}">MODIFIER</a></label>
+    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_typevehicule_new') }}">CREER</a></label>
     <label class="btn btn-outline-secondary">
         {{ form_start(delete_form) }}
-            <input type="submit" value="Supprimer" onclick="return confirm('Etes-vous sûr de vouloir supprimer?');">
+            <input type="submit" value="SUPPRIMER" onclick="return confirm('Etes-vous sûr de vouloir supprimer?');">
         {{ form_end(delete_form) }}
     </label>
 {% endblock %}
@@ -32,8 +41,12 @@
                 <td>{{ typeVehicule.montantVisite }}</td>
             </tr>
             <tr>
-                <th>Delai</th>
-                <td>{{ typeVehicule.delai }}</td>
+                <th>Delai pour revisite</th>
+                <td>{{ typeVehicule.delai }} jours</td>
+            </tr>
+            <tr>
+                <th>Validté de la visite</th>
+                <td>{{ typeVehicule.validite }} mois</td>
             </tr>
             <tr>
                 <th>Créé par</th>
