--- a/app/Resources/views/usage/index.html.twig
+++ b/app/Resources/views/usage/index.html.twig
@@ -1,7 +1,15 @@
 {% extends '::base.html.twig' %}
+{% block menu -%}
+{% embed  '::parametres/menu.html.twig' %}
+{% block menu_vehicules_open %}open{% endblock %}
+{% block menu_usages_open %}open{% endblock %}
+{% block menu_usages_actif %}active{% endblock %}
+{% endembed %}
+{% endblock %}
 {% block ariane -%}
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="{{ path('homepage') }}">Accueil</a></li>
+        <li class="breadcrumb-item"><a href="{{ path('parametre_index') }}">Paramètres</a></li>
         <li class="breadcrumb-item">Usages</li>
     </ol>
 {% endblock %}
@@ -19,7 +27,7 @@
     <table id="liste_clients" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered datatable dataTable no-footer">
         <thead>
             <tr>
-                <th>Libelle</th>
+                <th>Libellé</th>
                 <th>Code</th>
                 <th>Actions</th>
             </tr>
