--- a/app/Resources/views/usage/show.html.twig
+++ b/app/Resources/views/usage/show.html.twig
@@ -1,18 +1,27 @@
 {% extends '::base.html.twig' %}
+{% block menu -%}
+{% embed  '::parametres/menu.html.twig' %}
+{% block menu_vehicules_open %}open{% endblock %}
+{% block menu_usages_open %}open{% endblock %}
+{% block menu_usages_actif %}active{% endblock %}
+{% endembed %}
+{% endblock %}
 {% block ariane -%}
     <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="{{ path('homepage') }}">Accueil</a></li>
+          <li class="breadcrumb-item"><a href="{{ path('parametre_index') }}">Paramètres</a></li>
           <li class="breadcrumb-item"><a href="{{ path('admin_parametres_usage_index') }}">Usages</a></li>
           <li class="breadcrumb-item">Détail</li>
     </ol>
 {% endblock %}
 {% block pagetitle -%}VOIR UN USAGE DE VEHICULE{% endblock %}
 {% block actions %}
-    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_usage_index') }}">Liste des usages</a></label>
-    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_usage_edit', { 'id': usage.id }) }}">Modifier</a></label>
+    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_usage_index') }}">LISTER</a></label>
+    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_usage_edit', { 'id': usage.id }) }}">MODIFIER</a></label>
+    <label class="btn btn-outline-secondary"><a href="{{ path('admin_parametres_usage_new') }}">CREER</a></label>
     <label class="btn btn-outline-secondary">
         {{ form_start(delete_form) }}
-            <input type="submit" value="Supprimer" onclick="return confirm('Etes-vous sûr de vouloir supprimer?');">
+            <input type="submit" value="SUPPRIMER" onclick="return confirm('Etes-vous sûr de vouloir supprimer?');">
         {{ form_end(delete_form) }}
     </label>
 {% endblock %}
@@ -20,7 +29,7 @@
     <table class="table table-hover">
         <tbody>
             <tr>
-                <th>Libelle</th>
+                <th>Libellé</th>
                 <td>{{ usage.libelle }}</td>
             </tr>
             <tr>
