Ajout de tous les champs de la carte grise Menu délivrance commencé avec la possibilité de générer le rapport même si celui ci est vide pourn l'instant.

--- a/app/Resources/views/proprietaire/show.html.twig
+++ b/app/Resources/views/proprietaire/show.html.twig
@@ -52,6 +52,10 @@
                 <td>{{ proprietaire.email }}</td>
             </tr>
             <tr>
+                <th>Fonction</th>
+                <td>{{ proprietaire.fonction }}</td>
+            </tr>
+            <tr>
                 <th>Type</th>
                 <td>{% if proprietaire.personneMorale %}Entreprise{% else %}Particulier{% endif %}</td>
             </tr>
