--- a/app/Resources/views/vehicule/show.html.twig
+++ b/app/Resources/views/vehicule/show.html.twig
@@ -60,6 +60,50 @@
                 <td>{{ vehicule.couleur }}</td>
             </tr>
             <tr>
+                <th>Valide jusqu'au</th>
+                <td>{{ vehicule.dateValidite }}</td>
+            </tr>
+            <tr>
+                <th>Energie</th>
+                <td>{{ vehicule.energie }}</td>
+            </tr>
+            <tr>
+                <th>P.V.</th>
+                <td>{{ vehicule.pv }}</td>
+            </tr>
+            <tr>
+                <th>C.U.</th>
+                <td>{{ vehicule.cu }}</td>
+            </tr>
+            <tr>
+                <th>Puissance réelle</th>
+                <td>{{ vehicule.puissanceReelle }}</td>
+            </tr>
+            <tr>
+                <th>Capacité (Litres)</th>
+                <td>{{ vehicule.capacite }}</td>
+            </tr>
+            <tr>
+                <th>N° du moteur</th>
+                <td>{{ vehicule.moteur }}</td>
+            </tr>
+            <tr>
+                <th>Type de chassis</th>
+                <td>{{ vehicule.typeChassis }}</td>
+            </tr>
+            <tr>
+                <th>Date immatriculation précédente</th>
+                <td>{{ vehicule.dateImmatriculationPrecedent }}</td>
+            </tr>
+            <tr>
+                <th>N° immatriculation précédent</th>
+                <td>{{ vehicule.immatriculationPrecedent }}</td>
+            </tr>
+            <tr>
+                <th>Type de carte</th>
+                <td>{{ vehicule.typeCarte }}</td>
+            </tr>
+            <tr>
                 <th>TYPE</th>
                 <td>{{ vehicule.typeVehicule.libelle }}</td>
             </tr>
