--- a/app/Resources/views/visite/menu.html.twig
+++ b/app/Resources/views/visite/menu.html.twig
@@ -14,7 +14,7 @@
 {% endif %}
 {% if is_granted('ROLE_DELIVRANCE') %} 
 <li class="nav-item">
-    <a class="nav-link {% block menu_delivrance_actif %}{% endblock %}" href="#">
+    <a class="nav-link {% block menu_delivrance_actif %}{% endblock %}" href="{{ path('visite_delivrance') }}">
         <i class="nav-icon fa fa-list"></i> DELIVRANCE
     </a>
 </li>
